tweak before present

--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@ title: knowitall services
         <div class="col_sm-12 bg-white pad-box margin-all-xs">
           <div>
           <h4>{{services.servicename}}</h4>
-          <a href="#{{forloop.index}}"><i class="fa fa-angle-double-down transition-ease" aria-hidden="true"></i></a>
+          <a href="#{{forloop.index}}"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
           </div>
         </div>
         {% endfor %}
@@ -35,7 +35,7 @@ title: knowitall services
             <div>
               <p>{{services.servicedescription}}</p>
             </div>
-            <div class="text-right">
+            <div class="text-right position-rel readservices-button center-screen-md">
               <a href="mailto:"><button class="button-main">send email to request this project</button></a>
             </div>
         </div>
@@ -45,5 +45,5 @@ title: knowitall services
     <section class="pad-section margin-left-s margin-right-s">
       <h2 class="text-medium">Not quite ready to make a commitment?</h2>
       <p>That’s ok, let’s get to know each other first. You can find tons of useful (and FREE) resources in the blog.</p>
-      <a href=""><button class="button-main">learn for free</button></a>
+      <a href="blog.html"><button class="button-main">learn for free</button></a>
     </section>
